# AffinityExplainer

./: .gitignore  README.md  ablation.ipynb  app.py  competitors.ipynb  cut_iauc.yaml  datapp.py  dcama_ablation.yaml  demo.py  index.html  main.py  params.yaml  pyproject.toml  scripts.sh  test.ipynb  test_dcama.py  train_dcama.py
affex/: app.py  cache.py  collect.py  computational.py  evaluate.py  explainer.py  infidelity.py  lime.py  metrics.py  shap.py  substitution.py  test.py
affex/data/: __init__.py  coco.py  coco20i.py  coco_crop.py  dataset.py  deepglobe.py  evican.py  generate.py  industrial.py  isic.py  kvasir.py  lab2wild.py  lung.py  nucleus.py  pascal.py  pascal5i.py  utils.py  (+5 more)
checkpoints/: dcama
data_csv/: val_coco20i_N1K1.csv  val_coco20i_N1K2.csv  val_coco20i_N1K5.csv  val_deepglobe_N1K1.csv  val_deepglobe_N1K5.csv  val_isic_N1K1.csv  val_isic_N1K5.csv  val_lung_N1K1.csv  val_lung_N1K5.csv  val_pascal5i_N1K1.csv  val_pascal5i_N1K1_100.csv  val_pascal5i_N1K2.csv  val_pascal5i_N1K5.csv
fssweed/: explainer.py  metrics.py  substitution.py
notebooks/: ablation.ipynb  qualit.ipynb  qualit_cross.ipynb  results.ipynb  results_N1K1.ipynb  results_cross.ipynb
parameters/: cut_iauc.yaml  cut_iauc_miou.yaml  feature_ablation.yaml  feature_ablation_cut.yaml  infidelity.yaml  lime_search.yaml  pascal_dcama.yaml  pascal_dmtnet.yaml
scripts/: download_coco.sh  download_coco_jsononly.sh  download_dcama.sh  download_dmtnet.sh  download_pascal.sh  experiments.sh  generate_data_csv.sh
slurm/: condor  condor_grid  launch_computational  launch_run  launch_run_exe
(+116 files in other folders)
