[project]
name = "affinityexplainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "captum>=0.8.0",
    "easydict>=1.13",
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "lovely-tensors>=0.1.18",
    "mmcv>=2.2.0",
    "opencv-python>=4.11.0.86",
    "optuna>=4.3.0",
    "plotly>=6.0.1",
    "pycocotools>=2.0.8",
    "pyyaml>=6.0.2",
    "safetensors>=0.5.3",
    "saliency>=0.2.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
    "streamlit-image-coordinates>=0.2.1",
    "tabulate>=0.9.0",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.21.0",
    "transformers>=4.51.3",
    "wandb>=0.20.1",
]
